--- a/english/thesis/sources.bib
+++ b/english/thesis/sources.bib
@@ -431,3 +431,37 @@
   volume = {abs/1106.0675},
   url = {https://api.semanticscholar.org/CorpusID:6552475},
 }
+
+@inproceedings{7d175e0276cb49c2bb75a5844ae4b1b2,
+  title = "A general, fully distributed multi-agent planning algorithm",
+  abstract = "We present a fully distributed multi-agent planning algorithm. Our
+              methodology uses distributed constraint satisfaction to coordinate
+              between agents, and local planning to ensure the consistency of
+              these coordination points. To solve the distributed CSP efficiently
+              , we must modify existing methods to take advantage of the
+              structure of the underlying planning problem. In multi-agent
+              planning domains with limited agent interaction, our algorithm
+              empirically shows scalability beyond state of the art centralized
+              solvers. Our work also provides a novel, real-world setting for
+              testing and evaluating distributed constraint satisfaction
+              algorithms in structured domains and illustrates how existing
+              techniques can be altered to address such structure.",
+  keywords = "Distributed Constraint Satisfaction, Distributed Problem Solving,
+              Multi-Agent Planning, Single-Agent Planning",
+  author = "Raz Nissim and Brafman, {Ronen I.} and Carmel Domshlak",
+  year = "2010",
+  month = jan,
+  day = "1",
+  language = "English",
+  isbn = "9781617387715",
+  series = "Proceedings of the International Joint Conference on Autonomous
+            Agents and Multiagent Systems, AAMAS",
+  publisher = "International Foundation for Autonomous Agents and Multiagent
+               Systems (IFAAMAS)",
+  pages = "1323--1330",
+  booktitle = "9th International Joint Conference on Autonomous Agents and
+               Multiagent Systems 2010, AAMAS 2010",
+  note = "9th International Joint Conference on Autonomous Agents and Multiagent
+          Systems 2010, AAMAS 2010 ; Conference date: 10-05-2010",
+}
+
